css/style.css
#container{
  margin: 0 auto;
  width: 300+3*16px;
  text-align: left;
}

nav a {
    background-color: transparent;
    border-radius: 0px;
    border: medium none;
    cursor: pointer;
    font-size: 1.125rem;
    margin: 0px 10px;
    padding: 10px 16px 24px;
    width: 30%;
    text-align: center;
    color: #FFF;
    font-family:fantasy;
}
.flex-container {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    margin:10 auto;
    width: 300;
    height: 50px;
    background-color: darkblue;
}

.flex-item {
    background-color: transparent;
    width: 100px;
    height: 50px;
    margin: 5px;
}

nav {
  margin: 5px 0px 0px;
  position: relative;
}

